--- a/Time.Project.Manager/Time.Project.Manager.csproj
+++ b/Time.Project.Manager/Time.Project.Manager.csproj
@@ -42,6 +42,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.0.0.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
     </Reference>
@@ -65,6 +66,18 @@
     <Compile Include="AppBootstrapper.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="IShell.cs" />
+    <Compile Include="LogView.xaml.cs">
+      <DependentUpon>LogView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ManageView.xaml.cs">
+      <DependentUpon>ManageView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="NewProjectView.xaml.cs">
+      <DependentUpon>NewProjectView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SelectProjectView.xaml.cs">
+      <DependentUpon>SelectProjectView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ShellView.cs" />
     <Compile Include="ShellViewModel.cs" />
     <Compile Include="App.xaml.cs">
@@ -74,6 +87,22 @@
     <Compile Include="TPMP_Project.cs" />
     <Compile Include="TPMP_ProjectManager.cs" />
     <Compile Include="TPMP_Prompt.cs" />
+    <Page Include="LogView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ManageView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="NewProjectView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SelectProjectView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ShellView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -106,6 +135,22 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\config.png" />
+    <Resource Include="assets\hide.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\folder.png" />
+    <Resource Include="assets\log.png" />
+    <Resource Include="assets\manage.png" />
+    <Resource Include="assets\new_project.png" />
+    <Resource Include="assets\settings.png" />
+    <Resource Include="assets\start.png" />
+    <Resource Include="assets\stats.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\progress.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
